--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,1 +1,5 @@
-New view for new
+<%= form_for(@user) do |u| %>
+  <%= u.label :user %><br>
+  <%= u.text_area :name %>
+  <%= u.submit "Create" %>
+<% end %>
