--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <%= form_for(@user) do |u| %>
   <%= u.label :user %><br>
-  <%= u.text_area :name %>
-  <%= u.submit "Create" %>
+  Name:  <%= u.text_field :name %>
+  <%= u.submit "Crseate" %>
 <% end %>
